--- a/fullstack-app/src/i18n/messages/es.json
+++ b/fullstack-app/src/i18n/messages/es.json
@@ -15,5 +15,8 @@
     },
     "image-alt": "Imagen de la portada del documento",
     "uploading-document": "Subiendo..."
+  },
+  "locale-switcher": {
+    "locale": "{locale, select, es {Castellano} en {Inglés} other {Otro}}"
   }
 }
