feat(conversations): added modal for new conversation button on the sidebar

--- a/fullstack-app/src/i18n/messages/en.json
+++ b/fullstack-app/src/i18n/messages/en.json
@@ -24,5 +24,10 @@
   },
   "locale-switcher": {
     "locale": "{locale, select, es {Spanish} en {English} other {Unknown}}"
+  },
+  "document-list-picker-modal": {
+    "title": "Pick document",
+    "description": "Select a document to open a new conversation with it.",
+    "search-placeholder": "Search document..."
   }
 }
