--- a/fullstack-app/src/i18n/messages/es.json
+++ b/fullstack-app/src/i18n/messages/es.json
@@ -14,6 +14,11 @@
     "search": "Buscar",
     "title": "Conversaciones"
   },
+  "document-list-picker-modal": {
+    "description": "Seleccione un documento para abrir una nueva conversación.",
+    "search-placeholder": "Buscar documento...",
+    "title": "Seleccionar documento"
+  },
   "document-manager": {
     "header": {
       "search": "Buscar",
