feat(dashboard): added upload document modal

--- a/fullstack-app/src/i18n/messages/en.json
+++ b/fullstack-app/src/i18n/messages/en.json
@@ -27,6 +27,23 @@
     "image-alt": "Document preview",
     "uploading-document": "Uploading..."
   },
+  "upload-new-document-modal": {
+    "cancel": "Cancel",
+    "upload": "Upload new document",
+    "name": "Name",
+    "description": "Description",
+    "language-label": "Document language",
+    "file-input-label": "PDF file",
+    "form-errors": {
+      "name-required": "Name is required",
+      "name-min-length": "Name must be at least 3 characters long",
+      "name-max-length": "Name must be at most 255 characters long",
+      "file-required": "File is required",
+      "file-must-be-pdf": "File must be a PDF",
+      "file-max-size": "File must be less than {maxSizeInMB}MB",
+      "language-required": "Language is required"
+    }
+  },
   "locale-switcher": {
     "locale": "{locale, select, es {Spanish} en {English} other {Unknown}}"
   }
