--- a/fullstack-app/src/i18n/messages/es.json
+++ b/fullstack-app/src/i18n/messages/es.json
@@ -29,5 +29,22 @@
   },
   "locale-switcher": {
     "locale": "{locale, select, es {Castellano} en {Inglés} other {Otro}}"
+  },
+  "upload-new-document-modal": {
+    "cancel": "Cancelar",
+    "description": "Descripción",
+    "file-input-label": "Archivo PDF",
+    "form-errors": {
+      "file-max-size": "El archivo debe pesar menos de {maxSizeInMB}MB",
+      "file-must-be-pdf": "El archivo debe ser de tipo PDF",
+      "file-required": "Se requiere el archivo",
+      "language-required": "Se requiere seleccionar un idioma",
+      "name-max-length": "El nombre debe tener como máximo 255 caracteres.",
+      "name-min-length": "El nombre debe tener al menos 3 caracteres de largo.",
+      "name-required": "El nombre del archivo es obligatorio"
+    },
+    "language-label": "Idioma del documento",
+    "name": "Nombre",
+    "upload": "Subir nuevo documento"
   }
 }
