feat(dashboard): added edit document modal

--- a/fullstack-app/src/i18n/messages/en.json
+++ b/fullstack-app/src/i18n/messages/en.json
@@ -27,24 +27,38 @@
     "image-alt": "Document preview",
     "uploading-document": "Uploading..."
   },
-  "upload-new-document-modal": {
+  "edit-document-modal": {
     "cancel": "Cancel",
-    "upload": "Upload new document",
-    "name": "Name",
+    "delete": "Delete document",
+    "delete-confirmation": "Are you sure you want to delete this document? This action cannot be undone.",
     "description": "Description",
-    "language-label": "Document language",
-    "file-input-label": "PDF file",
     "form-errors": {
-      "name-required": "Name is required",
-      "name-min-length": "Name must be at least 3 characters long",
       "name-max-length": "Name must be at most 255 characters long",
-      "file-required": "File is required",
-      "file-must-be-pdf": "File must be a PDF",
-      "file-max-size": "File must be less than {maxSizeInMB}MB",
-      "language-required": "Language is required"
-    }
+      "name-min-length": "Name must be at least 3 characters long",
+      "name-required": "Name is required"
+    },
+    "name": "Name",
+    "save": "Save",
+    "title": "Edit document information"
   },
   "locale-switcher": {
     "locale": "{locale, select, es {Spanish} en {English} other {Unknown}}"
+  },
+  "upload-new-document-modal": {
+    "cancel": "Cancel",
+    "description": "Description",
+    "file-input-label": "PDF file",
+    "form-errors": {
+      "file-max-size": "File must be less than {maxSizeInMB}MB",
+      "file-must-be-pdf": "File must be a PDF",
+      "file-required": "File is required",
+      "language-required": "Language is required",
+      "name-max-length": "Name must be at most 255 characters long",
+      "name-min-length": "Name must be at least 3 characters long",
+      "name-required": "Name is required"
+    },
+    "language-label": "Document language",
+    "name": "Name",
+    "upload": "Upload new document"
   }
 }
