--- a/fullstack-app/src/i18n/messages/es.json
+++ b/fullstack-app/src/i18n/messages/es.json
@@ -32,12 +32,12 @@
     "delete": "Eliminar documento",
     "delete-confirmation": "¿Estás seguro de que deseas eliminar este documento? Esta acción no se puede deshacer.",
     "description": "Descripción",
+    "document-title": "Título",
     "form-errors": {
-      "name-max-length": "El nombre debe tener como máximo 255 caracteres.",
-      "name-min-length": "El nombre debe tener al menos 3 caracteres.",
-      "name-required": "El nombre es obligatorio"
+      "title-max-length": "El título debe tener como máximo 255 caracteres.",
+      "title-min-length": "El título debe tener al menos 3 caracteres.",
+      "title-required": "El título es obligatorio"
     },
-    "name": "Nombre",
     "save": "Guardar",
     "title": "Editar información del documento"
   },
@@ -47,18 +47,18 @@
   "upload-new-document-modal": {
     "cancel": "Cancelar",
     "description": "Descripción",
+    "document-title": "Título",
     "file-input-label": "Archivo PDF",
     "form-errors": {
       "file-max-size": "El archivo debe pesar menos de {maxSizeInMB}MB",
       "file-must-be-pdf": "El archivo debe ser de tipo PDF",
       "file-required": "Se requiere el archivo",
       "language-required": "Se requiere seleccionar un idioma",
-      "name-max-length": "El nombre debe tener como máximo 255 caracteres.",
-      "name-min-length": "El nombre debe tener al menos 3 caracteres de largo.",
-      "name-required": "El nombre del archivo es obligatorio"
+      "title-max-length": "El título debe tener como máximo 255 caracteres.",
+      "title-min-length": "El título debe tener al menos 3 caracteres de largo.",
+      "title-required": "El título del archivo es obligatorio"
     },
     "language-label": "Idioma del documento",
-    "name": "Nombre",
     "upload": "Subir nuevo documento"
   }
 }
