--- a/fullstack-app/src/i18n/messages/en.json
+++ b/fullstack-app/src/i18n/messages/en.json
@@ -26,20 +26,6 @@
     "image-alt": "Document preview",
     "uploading-document": "Uploading..."
   },
-  "edit-document-modal": {
-    "cancel": "Cancel",
-    "delete": "Delete document",
-    "delete-confirmation": "Are you sure you want to delete this document? This action cannot be undone.",
-    "description": "Description",
-    "document-title": "Title",
-    "form-errors": {
-      "title-max-length": "Title must be at most 255 characters long",
-      "title-min-length": "Title must be at least 3 characters long",
-      "title-required": "Title is required"
-    },
-    "save": "Save",
-    "title": "Edit document information"
-  },
   "locale-switcher": {
     "locale": "{locale, select, es {Spanish} en {English} other {Unknown}}"
   },
@@ -55,20 +41,40 @@
       "title": "Documents"
     }
   },
+  "update-document-modal": {
+    "cancel": "Cancel",
+    "delete": "Delete document",
+    "delete-confirmation": "Are you sure you want to delete this document? This action cannot be undone.",
+    "description": "Description",
+    "document-title": "Title",
+    "form-errors": {
+      "image-max-size": "Image must be smaller than {maxSizeInMB}MB.",
+      "image-must-be-valid": "Image must be a JPEG, PNG or WebP file.",
+      "title-max-length": "Title must be at most 255 characters long.",
+      "title-min-length": "Title must be at least 3 characters long.",
+      "title-required": "Title is required"
+    },
+    "image-input-label": "Cover image",
+    "save": "Save",
+    "title": "Edit document information"
+  },
   "upload-new-document-modal": {
     "cancel": "Cancel",
     "description": "Description",
     "document-title": "Title",
     "file-input-label": "PDF file",
     "form-errors": {
-      "file-max-size": "File must be less than {maxSizeInMB}MB",
+      "file-max-size": "File must be smaller than {maxSizeInMB}MB",
       "file-must-be-pdf": "File must be a PDF",
       "file-required": "File is required",
-      "language-required": "Language is required",
-      "title-max-length": "Title must be at most 255 characters long",
-      "title-min-length": "Title must be at least 3 characters long",
+      "image-max-size": "Image must be smaller than {maxSizeInMB}MB.",
+      "image-must-be-valid": "Image must be a JPEG, PNG or WebP file.",
+      "language-required": "Language is required.",
+      "title-max-length": "Title must be at most 255 characters long.",
+      "title-min-length": "Title must be at least 3 characters long.",
       "title-required": "Title is required"
     },
+    "image-input-label": "Cover image",
     "language-label": "Document language",
     "upload": "Upload new document"
   }
