fix(modal): locale form value starts unselected to force user to select

--- a/fullstack-app/src/i18n/messages/en.json
+++ b/fullstack-app/src/i18n/messages/en.json
@@ -76,6 +76,7 @@
     },
     "image-input-label": "Cover image",
     "language-label": "Document language",
+    "language-placeholder": "Select language code",
     "upload": "Upload new document"
   }
 }
