--- a/fullstack-app/src/i18n/messages/es.json
+++ b/fullstack-app/src/i18n/messages/es.json
@@ -76,6 +76,7 @@
     },
     "image-input-label": "Imagen de portada",
     "language-label": "Idioma del documento",
+    "language-placeholder": "Seleccione código de idioma",
     "upload": "Subir nuevo documento"
   }
 }
