feat(dashboard): adding new conversation button to document cards

--- a/fullstack-app/src/i18n/messages/en.json
+++ b/fullstack-app/src/i18n/messages/en.json
@@ -89,6 +89,15 @@
   },
   "document-manager": {
     "errors": {
+      "conversation": {
+        "add": {
+          "api": {
+            "internal-server-error": "Failed to add conversation",
+            "not-found": "Document not found"
+          },
+          "unknown-error": "Failed to add conversation"
+        }
+      },
       "documents": {
         "cancelDocumentParsing": {
           "api": {
